# xiaoqiang_udrf

./: CMakeLists.txt  README.md  manifest.xml  package.xml  urdf.rviz
config/: joint_names_xiaoqiang_udrf.yaml
launch/: display.launch  display.launch~  gazebo.launch  xiaoqiang_udrf.launch
meshes/: back_wheel.STL  back_wheel1.STL  back_wheel2.STL  base_Link2.STL  base_link.STL  front1_wheel.STL  front2_wheel.STL  front_wheel1.STL  front_wheel2.STL  kinect_link.STL  left_wheel.STL  lidar_link.STL  right_wheel.STL
robots/: xiaoqiang_udrf.URDF  xiaoqiang_udrf.URDF~  xiaoqiang_udrf.urdf
